[package]
name = "rgengine-sqlite-storage"
version = "0.1.0"
authors = ["Imota Eru"]

[lib]
name = "rgengine_sqlite_storage"

[dependencies]
rust-crypto = "^0.2"
rand = "0.5"
base64 = "0.9.2"
r2d2 = "0.8.2"
r2d2_sqlite = "0.5.0"

[dependencies.rgengine]
git = "https://github.com/threnody96/rgengine"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]

