[package]
name = "builder"
version = "0.1.0"
authors = ["Imota Eru <threnody96@gmail.com>"]

[dependencies]
rand = "0.5"
base64 = "0.9.2"
getopts = "0.2"

[dependencies.rgengine]
git = "https://github.com/threnody96/rgengine"

[dependencies.rgengine-sqlite-storage]
git = "https://github.com/threnody96/rgengine-sqlite-storage"
